# markup-language-parser

./: CMakeLists.txt  README.md  invalid2.txt  invalid3.txt  run_all_list.sh  run_parser.sh  run_single.sh  valid2.txt  valid4.txt  valid6.txt
src/: main.cpp  parse-test.cpp  parse-util.cpp  parse-util.h  parse.cpp  tree-util.hpp
test/: all_testcases.txt  invalid_1.txt  invalid_3.txt  invalid_4.txt  invalid_6.txt  invalid_7.txt  invalid_8.txt  invalid_9.txt  valid_1.txt  valid_3.txt  valid_5.txt  valid_7.txt  valid_8.txt  valid_9.txt
test/baseline/: invalid_5.out  invalid_6.out  invalid_7.out  valid_3.out  valid_6.out  valid_8.out  valid_9.out
test/result/: invalid_1.out  invalid_3.out  invalid_4.out  invalid_8.out  invalid_9.out  valid_1.out  valid_2.out  valid_3.out  valid_4.out  valid_5.out  valid_6.out  valid_7.out  valid_8.out
